feat(error-handling): add alert dialog for version check failures
Extend the version update feature requested by Wal by
adding proper error handling. When Mapiah cannot connect
to the version check server, users now see an informative
alert dialog instead of silent failure.

Implementation:
- Catch network and server errors during version checks
- Display user-friendly alert dialog with context

Requested-by: Wal

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -9,6 +9,11 @@
   "updateAvailableTitle": "Atualização disponível",
   "updateAvailableBody": "Uma versão mais recente está disponível.\n\nAtual: {currentVersion}\nMais recente: {latestVersion} ({tagName})\n\nDownload: {releaseUrl}",
   "updateDialogOpenButton": "Abrir",
+  "updateCheckFailedTitle": "Falha ao verificar atualização",
+  "updateCheckFailedNoAnswerBody": "Não foi possível verificar atualizações porque o servidor não respondeu. Verifique sua conexão com a internet.",
+  "updateCheckFailedHttpStatusBody": "O servidor de atualizações retornou HTTP {statusCode}.",
+  "updateCheckFailedParsingBody": "Não foi possível ler a versão mais recente no servidor de atualizações.",
+  "updateCheckFailedParsingWithTagBody": "Não foi possível interpretar a tag da versão mais recente: {tagName}",
   "fileEditWindowWindowTitle": "Edição de arquivo",
   "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
   "helpDialogTooltip": "Ajuda (F1)",
