--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -54,6 +54,37 @@
     "description": "Label for the open button in the update dialog",
     "type": "text"
   },
+  "updateCheckFailedTitle": "Update check failed",
+  "@updateCheckFailedTitle": {
+    "description": "Title for the update check failure dialog",
+    "type": "text"
+  },
+  "updateCheckFailedNoAnswerBody": "Unable to check for updates because the server did not respond. Do you have an internet connection?",
+  "@updateCheckFailedNoAnswerBody": {
+    "description": "Body text for the update check failure dialog when there is no response",
+    "type": "text"
+  },
+  "updateCheckFailedHttpStatusBody": "Update server returned HTTP {statusCode}.",
+  "@updateCheckFailedHttpStatusBody": {
+    "description": "Body text for the update check failure dialog when a non-200 HTTP status is returned",
+    "type": "text",
+    "placeholders": {
+      "statusCode": {}
+    }
+  },
+  "updateCheckFailedParsingBody": "Unable to read the latest version from the update server.",
+  "@updateCheckFailedParsingBody": {
+    "description": "Body text for the update check failure dialog when parsing fails",
+    "type": "text"
+  },
+  "updateCheckFailedParsingWithTagBody": "Unable to parse the latest version tag: {tagName}",
+  "@updateCheckFailedParsingWithTagBody": {
+    "description": "Body text for the update check failure dialog when parsing fails and a tag is available",
+    "type": "text",
+    "placeholders": {
+      "tagName": {}
+    }
+  },
   "initialPagePresentation": "Mapiah: an user-friendly graphical interface for cave mapping with Therion",
   "@initialPagePresentation": {
     "description": "The initial page presentation of the application",
