--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -360,15 +360,17 @@
   "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
   "th2FileEditPageSaveAsDialogTitle": "Salvar arquivo TH2 como",
   "th2FileEditPageSelectTool": "Selecionar (C)",
+  "th2FileEditPageSelectionWindowZoomStatusBarMessage": "Clique e arraste para definir a área para zoom",
   "th2FileEditPageSnapButton": "Ajustar a pontos",
   "th2FileEditPageUndo": "Desfazer '{undoDescription}' (Ctrl+Z)",
   "th2FileEditPageZoomIn": "Aproximar (+)",
-  "th2FileEditPageZoomOneToOne": "Mostrar 1:1 (1)",
+  "th2FileEditPageZoomOneToOne": "Zoom 1:1 (1)",
   "th2FileEditPageZoomOptions": "Opções de zoom",
   "th2FileEditPageZoomOut": "Afastar (-)",
-  "th2FileEditPageZoomOutFile": "Mostrar arquivo (4)",
-  "th2FileEditPageZoomOutScrap": "Mostrar croqui (3)",
-  "th2FileEditPageZoomToSelection": "Mostrar seleção (2)",
+  "th2FileEditPageZoomOutFile": "Zoom arquivo (4)",
+  "th2FileEditPageZoomOutScrap": "Zoom croqui (3)",
+  "th2FileEditPageZoomToSelection": "Zoom seleção (2)",
+  "th2FileEditPageZoomToSelectionWindow": "Zoom na área de seleção (5)",
   "th2FilePickSelectImageFile": "Selecione um arquivo de imagem",
   "th2FilePickSelectTH2File": "Selecione um arquivo TH2",
   "thAreaBedrock": "Rocha matriz",
