FIXED: Fixing popcorn point type translation

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -607,7 +607,7 @@
   "thPointPillar": "Pilar",
   "thPointPillarsWithCurtains": "Pilares com cortinas",
   "thPointPillarWithCurtains": "Pilar com cortinas",
-  "thPointPopcorn": "Popcorn",
+  "thPointPopcorn": "Coralóide",
   "thPointRaft": "Balsa",
   "thPointRaftCone": "Cone de balsa",
   "thPointRemark": "Observação",
